# MqttClient

./: CMakeLists.txt  README.md
MqttClient/: main.c
MqttClient.xcodeproj/: project.pbxproj
MqttClient.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MqttClient.xcodeproj/project.xcworkspace/xcuserdata/manu.xcuserdatad/: UserInterfaceState.xcuserstate
MqttClient.xcodeproj/xcuserdata/manu.xcuserdatad/xcschemes/: xcschememanagement.plist
